Various minor fixes.
Modify text displayed to user during the game. Replace new Integer()
usage with Integer.valueOf(). Replace string comparision == with
equals().